--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -327,7 +327,7 @@
   position: absolute;
   width: 130px;
   text-align: center;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: larger;
   top: 5px;
   left: 160px;
@@ -338,7 +338,7 @@
   position: absolute;
   width: 130px;
   text-align: center;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: larger;
   top: 5px;
   left: 160px;
@@ -352,7 +352,8 @@
   left: 5px;
   top: 35px;
   text-align: justify;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 #item-space-description {
@@ -363,7 +364,8 @@
   left: 5px;
   top: 35px;
   text-align: justify;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .user-svg {
@@ -375,7 +377,7 @@
   display: inline-block;
   float: left;
   position: absolute;
-  top: 120px;
+  top: 185px;
   left: 5px;
 }
 
@@ -388,19 +390,19 @@
   display: inline-block;
   float: right;
   position: absolute;
-  top: 120px;
+  top: 185px;
   left: 5px;
 }
 
 .user-legend {
   position: absolute;
-  top: 120px;
+  top: 185px;
   left: 435px;
 }
 
 .item-legend {
   position: absolute;
-  top: 120px;
+  top: 185px;
   left: 435px;
   width: 180px;
 }
@@ -409,20 +411,20 @@
   width: 440px;
   height: 120px;
   position: absolute;
-  top: 565px;
+  top: 627px;
   left: 8px;
   text-align: left;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .item-hover {
   width: 440px;
   height: 120px;
   position: absolute;
-  top: 565px;
+  top: 627px;
   left: 8px;
   text-align: left;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .react-stars {
